force-app/main/default/objects/CWS_SSO_Endpoints__c/CWS_SSO_Endpoints__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom endpoint settings for CWS_SSOUpdatedAccountContacts class</description>
    <label>SSO Endpoints</label>
</CustomObject>