force-app/main/default/objects/CWS_SSO_Endpoints__c/fields/CWS_SSO_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_Client_Secret__c</fullName>
    <defaultValue>&quot;gWl*GFqCgzGiJAu*936znh$gT0ro*n&quot;</defaultValue>
    <description>SSO client secret for OAuth with STS server.</description>
    <label>SSO Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>