force-app/main/default/objects/CWS_SSO_Endpoints__c/fields/CWS_SSO_Error_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_Error_Notification_Email__c</fullName>
    <defaultValue>&quot;masterdata@connectwise.com&quot;</defaultValue>
    <description>SSO error notification email</description>
    <label>SSO Error Notification Email</label>
    <type>Email</type>
</CustomField>