force-app/main/default/objects/CWS_SSO_Endpoints__c/fields/CWS_SSO_Integration_Active__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_Integration_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean switch to turn the SSO integration on and off</description>
    <label>SSO Integration Active</label>
    <type>Checkbox</type>
</CustomField>