force-app/main/default/objects/CWS_SSO_Endpoints__c/fields/CWS_SSO_SF_Gateway__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_SF_Gateway__c</fullName>
    <defaultValue>&quot;https://sf-gateway.myconnectwise.net/v1/connectwise/partners/provision&quot;</defaultValue>
    <description>SSO Salesforce gateway endpoint for retrieving the user SSO Id.</description>
    <label>SSO SF Gateway</label>
    <type>Url</type>
</CustomField>