force-app/main/default/objects/CWS_SSO_Endpoints__c/fields/CWS_SSO_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_Token_Endpoint__c</fullName>
    <defaultValue>&quot;https://auth.connectwise.com/connect/token&quot;</defaultValue>
    <description>URL for SSO OAUTH Token Server</description>
    <label>SSO Token Endpoint</label>
    <type>Url</type>
</CustomField>