force-app/main/default/objects/CWS_SSO_Endpoints__c/fields/CWS_SSO_Token_Redirect__c.field-meta.xml
<CustomField>
    <fullName>CWS_SSO_Token_Redirect__c</fullName>
    <defaultValue>&quot;https://connectwise20.my.salesforce.com/apex/oauthv2&quot;</defaultValue>
    <description>SSO redirect URL to pass to Token Server</description>
    <label>SSO Token Redirect</label>
    <type>Url</type>
</CustomField>